# wilkins

./: .gitignore  CMakeLists.txt  README.md  peru.yaml  repo.yaml
bindings/python/: CMakeLists.txt  py-wilkins.cpp
bindings/python/wilkins/: utils.py
examples/: CMakeLists.txt
examples/lowfive/: CMakeLists.txt  generate_run_script.py  wilkins-master.py  wilkins.py
examples/lowfive/actions/: actions.py  passthru-actions.py  wilkins_actions.py  wilkins_freeze_detect.yaml  wilkins_stateful_prod_con.yaml
examples/lowfive/cycle/: CMakeLists.txt  node0.cpp  node1.cpp  node2.cpp  run_cycle.sh  wilkins_cycle.yaml
examples/lowfive/ensembles/: CMakeLists.txt  NxN.yaml  consumer.cpp  consumer_stateful.cpp  fanout.yaml  generateRunScript.sh  producer.cpp  wilkins_prod_con.yaml
examples/lowfive/flow-control/: CMakeLists.txt  con-henson.cpp  consumer_1_2-henson.cpp  consumer_2_2-henson.cpp  prod-con-multidata.hpp  prod-henson.cpp  producer_1-henson.cpp  wilkins_prod_con.yaml  wlk_flow_control.py
examples/lowfive/flow-control/stateful/: CMakeLists.txt  benchmark.py  benchmark.sh  benchmark.yaml  con-henson.cpp  consumer_1_2-henson.cpp  consumer_2_2-henson.cpp  middle-hao.cpp  middle.cpp  prod-henson.cpp  producer_1-henson.cpp  run_stateful.sh  wilkins_prod_2cons.yaml  wilkins_prod_con.yaml  wilkins_prod_con.yaml-back  wilkins_prod_con_singleFile.yaml
examples/lowfive/flow-control/stateless/: CMakeLists.txt  analysis.cpp  run_stateless.sh  simulation.cpp  wilkins_prod_con.yaml  wilkins_prod_con_singleFile.yaml
examples/lowfive/prod-con-multidata/: CMakeLists.txt  NxN.yaml  README  consumer.cpp  consumer_1.cpp  consumer_1_2.cpp  consumer_2.cpp  consumer_2_2.cpp  fanin.yaml  fanout.yaml  generateSubgraphRunScript.sh  prod-con-multidata.hpp  producer.cpp  producer_1.cpp  producer_1_2.cpp  producer_2_2.cpp  wilkins_2nodes.json  wilkins_2prods_con.sh  wilkins_2prods_con.yaml  wilkins_3nodes.json  wilkins_3nodes.sh  wilkins_master.cpp  wilkins_prod_2cons.sh  wilkins_prod_2cons.yaml  wilkins_prod_con.sh  wilkins_prod_con.yaml
examples/python/: CMakeLists.txt  con.py  consumer.py  prod.py  producer.py  wilkins_prod_con.sh  wilkins_prod_con.yaml  wilkins_run.sh
examples/python/mpmd/: CMakeLists.txt  wilkins_prod_con.yaml
ext/lowfive/examples/links/: links.cpp
include/mpi4py/: mpi.pxi  mpi4py.MPI.h  mpi4py.MPI_api.h  mpi4py.h  mpi4py.i
include/wilkins/: comm.hpp  context.h  data.hpp  dataflow.hpp  serialization.hpp  types.hpp  wilkins.hpp  workflow.hpp
spack-env-recipes/Perlmutter/: perlmutter-env.yaml
spack-env-recipes/Polaris/: polaris-env.yaml
spack-env-recipes/base/: base-env.yaml
src/: CMakeLists.txt
src/wilkins/: CMakeLists.txt  comm.cpp  context.cpp  data.cpp  dataflow.cpp  wilkins.cpp  workflow.cpp
tests/: CMakeLists.txt  con-test.py  con1-test.py  con2-test.py  prod-test.py  prod1-test.py  prod2-test.py  test-cycle.sh  test-ensemble.sh  test-python.sh  test-stateful.sh  test-stateless.sh  wilkins_cycle_test_memory.yaml  wilkins_cycle_test_passthru.yaml  wilkins_ensemble_test_NxN.yaml  wilkins_ensemble_test_fanin.yaml  wilkins_ensemble_test_fanout.yaml  wilkins_python_test_2prodscon_memory.yaml  wilkins_python_test_2prodscon_passthru.yaml  wilkins_python_test_memory.yaml  wilkins_python_test_passthru.yaml  wilkins_python_test_prod2cons_memory.yaml  wilkins_python_test_prod2cons_passthru.yaml  wilkins_stateful_test.yaml  wilkins_stateful_test_passthru.yaml  wilkins_stateful_test_singleFile.yaml  wilkins_stateful_test_subsetWriters.yaml  wilkins_stateless_test.yaml  wilkins_stateless_test_passthru.yaml  wilkins_stateless_test_singleFile.yaml
